# spaceframe

./: CMakeLists.txt  Makefile  README
include/sf/: face.h  field.h  geom.h  log.h  mat4.h  mpf.h  mpz.h  qtrn.h  sf.h  shape.h  spheroid.h  vec3.h  vec4.h
src/glfw3/: CMakeLists.txt  Makefile  window.cc
src/gmp/: CMakeLists.txt  Makefile  mpz.cc
src/mpfr/: CMakeLists.txt  Makefile  mpf.cc
src/sf/: CMakeLists.txt  Makefile  face.cc  face.h  geom.cc  geom.h  mat4.cc  mat4.h  mpf.h  mpz.h  qtrn.cc  qtrn.h  sf.cc  spheroid.cc  spheroid.h  tetra.cc  tetra.h  vec3.cc  vec3.h  vec4.cc  vec4.h
src/spaceframe/: .gitignore  CMakeLists.txt  frag.glsl  input.h  log.h  shader.cc  shader.h  spaceframe.cc  vert.glsl  window.h
src/spdlog/: CMakeLists.txt  Makefile  log.cc
